corpus/baselines/conformance/salsa/moduleExportAssignment4.errors.txt
async.js(2,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== async.js (1 errors) ====
    exports.default = { m: 1, a: 1 }
    module.exports = exports['default'];
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    